[gd_scene load_steps=19 format=2]

[ext_resource path="res://resources/cenariotras.png" type="Texture" id=1]
[ext_resource path="res://resources/cenariofrente.png" type="Texture" id=2]
[ext_resource path="res://scenes/ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/alvo.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/scripts/main.gd" type="Script" id=5]
[ext_resource path="res://scenes/top.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/cao/captura.png" type="Texture" id=7]
[ext_resource path="res://resources/cao/rindo.png" type="Texture" id=8]
[ext_resource path="res://resources/sons/cao_captura.wav" type="AudioStream" id=9]
[ext_resource path="res://resources/sons/cao_rindo.wav" type="AudioStream" id=10]
[ext_resource path="res://resources/sons/flyaway.wav" type="AudioStream" id=11]
[ext_resource path="res://resources/sons/colidiu.wav" type="AudioStream" id=12]
[ext_resource path="res://resources/hud.png" type="Texture" id=13]
[ext_resource path="res://resources/PressStart2P.ttf" type="DynamicFontData" id=14]

[sub_resource type="Animation" id=1]
length = 0.001

[sub_resource type="Animation" id=2]
resource_name = "captura"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("captura:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.7, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 499, 481 ), Vector2( 493, 357 ), Vector2( 502, 510 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rindo"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("rindo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 493, 485 ), Vector2( 493, 347 ), Vector2( 493, 540 ) ]
}

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 14 )

[node name="main" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="Sprite" parent="."]
scale = Vector2( 1.335, 0.843 )
z_index = -3
texture = ExtResource( 1 )
centered = false

[node name="background2" type="Sprite" parent="."]
scale = Vector2( 1.33464, 0.843056 )
z_index = 1
texture = ExtResource( 2 )
centered = false

[node name="alvo" parent="." instance=ExtResource( 4 )]
position = Vector2( 511, 278 )

[node name="gerarpato" type="Timer" parent="."]
one_shot = true

[node name="espera" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="top" parent="." instance=ExtResource( 6 )]
position = Vector2( 342, -147 )

[node name="ground" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, 834 )

[node name="captura" type="Sprite" parent="."]
position = Vector2( 499, 481 )
texture = ExtResource( 7 )

[node name="rindo" type="Sprite" parent="."]
position = Vector2( 493, 485 )
texture = ExtResource( 8 )

[node name="cao" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/captura = SubResource( 2 )
anims/rindo = SubResource( 3 )

[node name="caoCaptura" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="caoRindo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="fly" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="capt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="hud" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="hud"]
position = Vector2( 527, 534 )
texture = ExtResource( 13 )

[node name="contador" type="Label" parent="hud"]
margin_left = 489.0
margin_top = 509.0
margin_right = 567.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 4 )
text = "000"
align = 1
valign = 1

[connection signal="timeout" from="gerarpato" to="." method="_on_gerarpato_timeout"]
[connection signal="timeout" from="espera" to="." method="_on_espera_timeout"]
[connection signal="body_entered" from="top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="ground" to="." method="_on_ground_body_entered"]
